[WIP] Attempt to cache embedded fonts
The next step is to add them to the list of available ones.